@@ -436,6 +436,7 @@
 					<option value="1" data-i18n="Pressure (Bar)">Pressure (Bar)</option>
 					<option value="2" data-i18n="Percentage">Percentage</option>
 					<option value="3" data-i18n="Gas">Gas</option>
+					<option value="246" data-i18n="Lux">Lux</option>
 				</select>
 		</form>
 </div>
