@@ -62,6 +62,7 @@ Version 1.0.xxxx (April xxth 2014)
 - Implemented: Lighting5, Aoke
 - Implemented: RFY, Venetian Blinds support (EU/US)
 - Implemented: A-OK Blinds now displays a stop button
+- Implemented: Option for Dummy device to create Lux Sensor
 
 Version 1.0.1680 (April 21th 2014)
 - Implemented: Support for Forecast.io
